RESOLVED FIXED243973
Overlay regions do not correctly handle sticky positioned scrolling nodes
https://bugs.webkit.org/show_bug.cgi?id=243973
Summary Overlay regions do not correctly handle sticky positioned scrolling nodes
Mike Wyrzykowski
Reported 2022-08-15 19:38:59 PDT
Overlay regions do not correctly handle sticky positioned scrolling nodes
Attachments
Mike Wyrzykowski
Comment 1 2022-08-15 19:40:07 PDT
Mike Wyrzykowski
Comment 2 2022-08-16 15:50:33 PDT
EWS
Comment 3 2022-08-19 14:30:52 PDT
Committed 253603@main (649ae3da2abe): <https://commits.webkit.org/253603@main> Reviewed commits have been landed. Closing PR #3383 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.